Demonstrated the flex-flow.

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -433,5 +433,23 @@
       </section>
     </article>
 
+    <hr><!------------------------------------------------------------------------------------------->
+
+    <article>
+      <h1>flex-flow</em></h1>
+      <section class="container">
+        <div class="box">a</div>
+        <div class="box">b</div>
+        <div class="box">c</div>
+        <div class="box">d</div>
+        <div class="box">e</div>
+        <div class="box">f</div>
+        <div class="box">g</div>
+        <div class="box">h</div>
+        <div class="box">i</div>
+        <div class="box">j</div>
+      </section>
+    </article>
+
   </body>
 </html>
