Demonstrated the nested flex boxs.

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -451,5 +451,22 @@
       </section>
     </article>
 
+    <hr><!------------------------------------------------------------------------------------------->
+
+    <article>
+      <h1>Nested flex boxed</em></h1>
+      <section class="container">
+        <section>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+        </section>
+        <section>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+        </section>
+      </section>
+    </article>
   </body>
 </html>
