--- a/grid/index.html
+++ b/grid/index.html
@@ -10,6 +10,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Test</h1>
+    <article>
+      <h1>Demonstrating the CSS Grid</h1>
+    </article>
   </body>
 </html>
