Formatting for the grid demonstration.

--- a/grid/index.html
+++ b/grid/index.html
@@ -12,6 +12,9 @@
   <body>
     <article>
       <h1>Demonstrating the CSS Grid</h1>
+      <section class="basic-grid">
+        
+      </section>
     </article>
   </body>
 </html>
