Started the grid demonstration.

--- a/grid/index.html
+++ b/grid/index.html
@@ -13,7 +13,11 @@
     <article>
       <h1>Demonstrating the CSS Grid</h1>
       <section class="basic-grid">
-        
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
       </section>
     </article>
   </body>
