Modifying the grid so it looks cooler.

--- a/grid/index.html
+++ b/grid/index.html
@@ -18,6 +18,9 @@
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
       </section>
     </article>
   </body>
