Added an item that spans 2 rows.

--- a/grid/index.html
+++ b/grid/index.html
@@ -21,6 +21,7 @@
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
+        <div class="grid-item"></div>
       </section>
     </article>
   </body>
