Readying for tomorrow.

--- a/grid/index.html
+++ b/grid/index.html
@@ -12,6 +12,8 @@
   <body>
     <article>
       <h1>Demonstrating the CSS Grid</h1>
+
+      <h2>Basic Grid Usage</h2>
       <section class="basic-grid">
         <div class="grid-item"></div>
         <div class="grid-item"></div>
@@ -23,6 +25,8 @@
         <div class="grid-item"></div>
         <div class="grid-item"></div>
       </section>
+
+      <h2>Grid Template Areas</h2>
     </article>
   </body>
 </html>
