Standardized the creation of a basic grid.

--- a/grid/index.html
+++ b/grid/index.html
@@ -14,7 +14,7 @@
       <h1>Demonstrating the CSS Grid</h1>
 
       <h2>Basic Grid Usage</h2>
-      <section class="basic-grid">
+      <section class="basic grid">
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
@@ -27,6 +27,9 @@
       </section>
 
       <h2>Grid Template Areas</h2>
+      <section class="basic grid">
+        
+      </section>
     </article>
   </body>
 </html>
