Demonstrated the grid-template area.

--- a/grid/index.html
+++ b/grid/index.html
@@ -14,7 +14,7 @@
       <h1>Demonstrating the CSS Grid</h1>
 
       <h2>Basic Grid Usage</h2>
-      <section class="basic grid">
+      <section class="grid basic">
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
@@ -27,8 +27,12 @@
       </section>
 
       <h2>Grid Template Areas</h2>
-      <section class="basic grid">
-        
+      <section class="grid template">
+        <div class="header grid-item"></div>
+        <div class="main-left grid-item"></div>
+        <div class="main-right grid-item"></div>
+        <div class="main-bottom grid-item"></div>
+        <div class="footer grid-item"></div>
       </section>
     </article>
   </body>
