Ready for tomorrow.

--- a/grid/index.html
+++ b/grid/index.html
@@ -34,6 +34,16 @@
         <div class="main-bottom grid-item"></div>
         <div class="footer grid-item"></div>
       </section>
+
+      <h2>Grid TBD</h2>
+      <section class="grid ">
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+      </section>
+
     </article>
   </body>
 </html>
