Began the demonstration of overlapping items.

--- a/grid/index.html
+++ b/grid/index.html
@@ -35,8 +35,13 @@
         <div class="footer grid-item"></div>
       </section>
 
-      <h2>Grid TBD</h2>
-      <section class="grid ">
+      <h2>Grid Overlap</h2>
+      <section class="grid overlap">
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
