Demonstrated the overlapping of elements.

--- a/grid/index.html
+++ b/grid/index.html
@@ -47,6 +47,8 @@
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
       </section>
 
     </article>
