Demonstrating justify-items.

--- a/grid/index.html
+++ b/grid/index.html
@@ -13,7 +13,7 @@
     <article>
       <h1>Demonstrating the CSS Grid</h1>
 
-      <h2>Basic Grid Usage</h2>
+      <h2>Basic Grid</h2>
       <section class="grid basic">
         <div class="grid-item"></div>
         <div class="grid-item"></div>
@@ -26,7 +26,7 @@
         <div class="grid-item"></div>
       </section>
 
-      <h2>Grid Template Areas</h2>
+      <h2>Template Areas</h2>
       <section class="grid template">
         <div class="header grid-item"></div>
         <div class="main-left grid-item"></div>
@@ -35,7 +35,7 @@
         <div class="footer grid-item"></div>
       </section>
 
-      <h2>Grid Overlap</h2>
+      <h2>Overlaps</h2>
       <section class="grid overlap">
         <div class="grid-item"></div>
         <div class="grid-item"></div>
@@ -51,6 +51,46 @@
         <div class="grid-item"></div>
       </section>
 
+      <h2>justify-items</h2>
+      <h3>start</h3>
+      <section class="grid justify-items start">
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+      </section>
+
+      <h3>center</h3>
+      <section class="grid justify-items center">
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+      </section>
     </article>
   </body>
 </html>
