Readying for justify-self and align-self.

--- a/grid/index.html
+++ b/grid/index.html
@@ -512,7 +512,26 @@
 
 
 
-      
+      <h2>justify-self & align-self</h2>
+      <h3>start</h3>
+      <section class="grid self start">
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+      </section>
     </article>
   </body>
 </html>
