Demonstrated the autoflow and autorow and auto column.

--- a/grid/index.html
+++ b/grid/index.html
@@ -558,10 +558,14 @@
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
       </section>
 
       <h3>grid-auto-columns & grid-auto-flow: column</h3>
       <section class="grid implicit column">
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
