Creating templates for easy usage.

--- a/sizing-elements/index.html
+++ b/sizing-elements/index.html
@@ -8,6 +8,13 @@
     <title>Document</title>
   </head>
   <body>
-    
+    <article>
+      <h1>Demonstrating sizing elements</h1>
+
+      <h2>Using <em>em</em> with <em>font-size</em></h2>
+      <div class="flex-container em">
+
+      </div>
+    </article>
   </body>
 </html>
