Demonstrated the use of em with font-size.

--- a/relative-sizing/index.html
+++ b/relative-sizing/index.html
@@ -13,7 +13,9 @@
 
       <h2>Using <em>em</em> with <em>font-size</em></h2>
       <div class="flex-container em">
-
+        <p>font-size: 2em;</p>
+        <p>font-size: 2em;</p>
+        <p>font-size: 2em;</p>
       </div>
     </article>
   </body>
