--- a/relative-sizing/index.html
+++ b/relative-sizing/index.html
@@ -4,19 +4,44 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="../sandbox.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
   </head>
   <body>
     <article>
-      <h1>Demonstrating sizing elements</h1>
+      <h1>Demonstrating relative sizing</h1>
 
       <h2>Using <em>em</em> with <em>font-size</em></h2>
       <div class="flex-container em">
+        <p>font-size: 1em;</p>
         <p>font-size: 2em;</p>
-        <p>font-size: 2em;</p>
-        <p>font-size: 2em;</p>
+        <p>font-size: 3em;</p>
       </div>
+
+      <h2>Using <em>rem</em> with <em>font-size</em></h2>
+      <div class="flex-container rem">
+        <p>font-size: 1rem;</p>
+        <p>font-size: 2rem;</p>
+        <p>font-size: 3rem;</p>
+      </div>
+
+      <h2>Percentages with height and width</h2>
+      <aside>Resize to see effect.</aside>
+      <div class="flex-container percent-hw">
+        <div>
+          <h4>height: 50%;<br>width: 75%;</h4>
+        </div>
+      </div>
+
+      <h2>Percentages with margin and padding</h2>
+      <aside>Resize to see effect.</aside>
+      <div class="flex-container percent-pm">
+        <div>
+          <h4>height: 100%;<br>width: 100%;<br>  margin-left: 2%;<br>margin-right: 5%;</h4>
+        </div>
+      </div>
+
     </article>
   </body>
 </html>
