Demonstrated min and max width.

--- a/relative-sizing/index.html
+++ b/relative-sizing/index.html
@@ -42,6 +42,12 @@
         </div>
       </div>
 
+      <h2>Minimum & Maximums</h2>
+      <aside>Resize to see effect.</aside>
+      <div class="flex-container min-max">
+        <div></div>
+      </div>
+
     </article>
   </body>
 </html>
