Demonstrated resizing of images in a container.

--- a/relative-sizing/index.html
+++ b/relative-sizing/index.html
@@ -48,10 +48,15 @@
         <div></div>
       </div>
 
-      <h2>Minimum & Maximums</h2>
+      <h2>Scaling Images</h2>
       <aside>Resize to see effect.</aside>
-      <div class="flex-container min-max">
-        <div></div>
+      <div class="flex-container images">
+        <img src="resources/images/blue-image.jpeg" alt="Beautiful blue image." title="Beautiful blue image.">
+      </div>
+
+      <h2>Scaling Images</h2>
+      <aside>Resize to see effect.</aside>
+      <div class="flex-container images">
       </div>
 
     </article>
