Done demonstrating relative sizing.

--- a/relative-sizing/index.html
+++ b/relative-sizing/index.html
@@ -54,11 +54,12 @@
         <img src="resources/images/blue-image.jpeg" alt="Beautiful blue image." title="Beautiful blue image.">
       </div>
 
-      <h2>Scaling Images</h2>
+      <h2>Scaling Elements with a Background</h2>
       <aside>Resize to see effect.</aside>
-      <div class="flex-container images">
+      <div class="flex-container background">
       </div>
 
+      <footer></footer>
     </article>
   </body>
 </html>
