Starting the media-queries.

--- a/media-queries/index.html
+++ b/media-queries/index.html
@@ -13,7 +13,10 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <h1>Demonstrating Media Queries</h1>
+      <aside>Resize the browser with the developer tools to see the effects.</aside>
+    </main>
     <footer></footer>
   </body>
 </html>
