--- a/media-queries/index.html
+++ b/media-queries/index.html
@@ -16,6 +16,16 @@
     <main>
       <h1>Demonstrating Media Queries</h1>
       <aside>Resize the browser with the developer tools to see the effects.</aside>
+      <div class="grid-container">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </main>
     <footer></footer>
   </body>
