--- a/front-end-js-basics/index.html
+++ b/front-end-js-basics/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="icon" href="resources/images/sandbox.png">
+    <script src="resources/js/a.js"></script>
     <title>Document</title>
   </head>
   <body>
