--- a/front-end-js-basics/index.html
+++ b/front-end-js-basics/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="icon" href="resources/images/sandbox.png">
     <script src="resources/js/defer.js" defer></script>
+    <script src="resources/js/async.js" async></script>
     <title>Document</title>
   </head>
   <body>
