Added a change color button.

--- a/dom-events/index.html
+++ b/dom-events/index.html
@@ -8,13 +8,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="icon" href="resources/images/sandbox.png">
-    <script src="resources/js/defer.js" defer></script>
-    <script src="resources/js/async.js" async></script>
+    <script src="resources/js/main.js" defer></script>
     <title>Document</title>
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <button id="switch">Change color</button>
+      <div id="color">
+
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
