Getting ready to do some form stuff.

--- a/form-basics/index.html
+++ b/form-basics/index.html
@@ -12,7 +12,12 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <form action="/index.html">
+        <label for="text">What's your name?</label>
+        <input id="text" name="text" type="text" value="">
+      </form>
+    </main>
     <footer></footer>
   </body>
 </html>
