Demonstrated text and passwords.

--- a/form-basics/index.html
+++ b/form-basics/index.html
@@ -14,8 +14,12 @@
     <header></header>
     <main>
       <form action="/index.html">
-        <label for="text">What's your name?</label>
+        <label for="text">Username</label>
         <input id="text" name="text" type="text" value="">
+
+        <label for="password">Password</label>
+        <input type="password">
+
       </form>
     </main>
     <footer></footer>
