--- a/form-basics/index.html
+++ b/form-basics/index.html
@@ -17,9 +17,11 @@
         <label for="text">Username</label>
         <input id="text" name="text" type="text" value="">
 
-        <label for="password">Password</label>
+        <label for="password">Password:</label>
         <input type="password">
 
+        <label for="number">Number:</label>
+        <input id="number" name="number" type="number" step="1">
       </form>
     </main>
     <footer></footer>
