--- a/form-basics/index.html
+++ b/form-basics/index.html
@@ -17,11 +17,16 @@
         <label for="text">Username</label>
         <input id="text" name="text" type="text" value="">
 
-        <label for="password">Password:</label>
-        <input type="password">
+        <label for="password">Password</label>
+        <input id="password" type="password">
 
-        <label for="number">Number:</label>
+        <label for="number">Number</label>
         <input id="number" name="number" type="number" step="1">
+
+        <label for="volume">Volume</label>
+        <input id="volume" name="volume" type="range" min="0" max="9" step="1">
+
+        
       </form>
     </main>
     <footer></footer>
