--- a/form-basics/index.html
+++ b/form-basics/index.html
@@ -15,18 +15,24 @@
     <main>
       <form action="/index.html">
         <label for="text">Username</label>
-        <input id="text" name="text" type="text" value="">
+        <input id="text" name="text" type="text" value=""><br>
 
         <label for="password">Password</label>
-        <input id="password" type="password">
+        <input id="password" type="password"><br>
 
         <label for="number">Number</label>
-        <input id="number" name="number" type="number" step="1">
+        <input id="number" name="number" type="number" step="1"><br>
 
         <label for="volume">Volume</label>
-        <input id="volume" name="volume" type="range" min="0" max="9" step="1">
+        <input id="volume" name="volume" type="range" min="0" max="9" step="1"><br>
 
-        
+        <label for="check">Checkbox</label>
+        <input id="check" name="check" type="checkbox" value="check"><br>
+
+        <label for="radio">Radio</label>
+        <input type="radio" id="radio" name="radio" value="yes">
+        <label for="radio1">Radio</label>
+        <input type="radio" id="radio1" name="radio" value="no">
       </form>
     </main>
     <footer></footer>
