Demonstrated the drop down.

--- a/form-basics/index.html
+++ b/form-basics/index.html
@@ -32,7 +32,15 @@
         <label for="radio">Radio</label>
         <input type="radio" id="radio" name="radio" value="yes">
         <label for="radio1">Radio</label>
-        <input type="radio" id="radio1" name="radio" value="no">
+        <input type="radio" id="radio1" name="radio" value="no"><br>
+
+        <label for="dropdown">Dropdown</label>
+        <select name="dropdown" id="dropdown">
+          <option value="a">A</option>
+          <option value="b">B</option>
+          <option value="c">C</option>
+        </select>
+
       </form>
     </main>
     <footer></footer>
