Demonstrated the datalist.

--- a/form-basics/index.html
+++ b/form-basics/index.html
@@ -39,8 +39,15 @@
           <option value="a">A</option>
           <option value="b">B</option>
           <option value="c">C</option>
-        </select>
+        </select><br>
 
+        <label for="datalist">Datalist</label>
+        <input type="text" list="datalists" id="datalist" name="datalist">
+        <datalist id="datalists">
+          <option value="a"></option>
+          <option value="b"></option>
+          <option value="c"></option>
+        </datalist>
       </form>
     </main>
     <footer></footer>
