Demonstrated the textarea.

--- a/form-basics/index.html
+++ b/form-basics/index.html
@@ -48,6 +48,12 @@
           <option value="b"></option>
           <option value="c"></option>
         </datalist>
+        <br>
+
+        <label for="textarea">Textarea</label>
+        <textarea name="textarea" id="textarea" cols="30" rows="10">
+          
+        </textarea>
       </form>
     </main>
     <footer></footer>
