--- a/form-basics/index.html
+++ b/form-basics/index.html
@@ -52,8 +52,10 @@
 
         <label for="textarea">Textarea</label>
         <textarea name="textarea" id="textarea" cols="30" rows="10">
-          
         </textarea>
+        <br>
+
+        <input type="submit" value="Submit">
       </form>
     </main>
     <footer></footer>
