--- a/form-basics/index.html
+++ b/form-basics/index.html
@@ -15,10 +15,10 @@
     <main>
       <form action="/index.html">
         <label for="text">Username</label>
-        <input id="text" name="text" type="text" value=""><br>
+        <input id="text" name="text" type="text" value="" required><br>
 
         <label for="password">Password</label>
-        <input id="password" type="password"><br>
+        <input id="password" type="password" required><br>
 
         <label for="number">Number</label>
         <input id="number" name="number" type="number" step="1"><br>
