--- a/form-basics/index.html
+++ b/form-basics/index.html
@@ -21,7 +21,7 @@
         <input id="password" type="password" required><br>
 
         <label for="number">Number</label>
-        <input id="number" name="number" type="number" step="1"><br>
+        <input id="number" name="number" type="number" step="1"  min="0" max="9"><br>
 
         <label for="volume">Volume</label>
         <input id="volume" name="volume" type="range" min="0" max="9" step="1"><br>
