Demonstrated the minlength and maxlength attributes for numbers.

--- a/form-basics/index.html
+++ b/form-basics/index.html
@@ -15,7 +15,7 @@
     <main>
       <form action="/index.html">
         <label for="text">Username</label>
-        <input id="text" name="text" type="text" value="" required><br>
+        <input id="text" name="text" type="text" value="" minlength="4" maxlength="10"><br>
 
         <label for="password">Password</label>
         <input id="password" type="password" required><br>
