Demonstrated the pattern attribute.

--- a/form-basics/index.html
+++ b/form-basics/index.html
@@ -18,7 +18,7 @@
         <input id="text" name="text" type="text" value="" minlength="4" maxlength="10"><br>
 
         <label for="password">Password</label>
-        <input id="password" type="password" required><br>
+        <input id="password" type="password" required pattern="[a-zA-Z0-9]+"><br>
 
         <label for="number">Number</label>
         <input id="number" name="number" type="number" step="1"  min="0" max="9"><br>
